[package]
name = "sdl_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[dependencies]
#sdl2 = "0.35"

[dependencies]
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]

[profile.dev]
opt-level=3